Fix issue where languages on home page caused weird glitch with menu not showing

--- a/src/App.css
+++ b/src/App.css
@@ -649,13 +649,14 @@ hr {
 
 .logo-item > div {
     display: inline-block;
-    width: 20%;
-
+    width: 30%;
+    padding: 0;
 }
 
 .logo-item > div > img {
-    max-width: 100px;
-    padding: 1em;
+    max-width: 5em;
+    margin: 0.5em;
+    max-height: 5em;
 }
 
 .card-description {
